welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:29: error: not enough arguments for method faireMotif: (y: java.awt.Color, r: java.awt.Color, b: java.awt.Color, g: java.awt.Color)Unit.
Unspecified value parameters y, r, b, ...
		{faireMotif()
                           ^